[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/dick/Dick.png" type="Texture" id=1]
[ext_resource path="res://images/dick/Skull.png" type="Texture" id=2]
[ext_resource path="res://scenes/dick/dick.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=11]
radius = 44.5278
height = 244.946

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.98913, 183.273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.285714, 0.68323, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.48913, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 100, 1, 1 )
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, -47, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale = 0.08
scale_curve = SubResource( 10 )
color_ramp = SubResource( 7 )

[sub_resource type="Animation" id=12]
resource_name = "FadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Dick" type="RigidBody2D"]
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
angular_velocity = 10.0
angular_damp = 0.0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.38419e-07, -4.76837e-07 )
rotation = 0.762009
scale = Vector2( 0.153131, 0.153131 )
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( -4.94037, 13.7412 )
rotation = -0.862216
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="CollisionShape2D"]
position = Vector2( -7.14491, 10.523 )
rotation = -1.57918
scale = Vector2( 1.30693, 0.425547 )
amount = 6
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
__meta__ = {
"_editor_description_": "Death timer"
}

[connection signal="body_entered" from="." to="." method="_on_Dick_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
